--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,6 @@
 <html>
 		<head>
-				<link rel="stylesheet" type="text/css" href="../build/build.css">
+				<link rel="stylesheet" type="text/css" href="build/build.css">
 				<title></title>
 		</head>
 		<body>
